--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,15 @@
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
         "symfony/maker-bundle": "^1.21",
+        "symfony/security-bundle": "4.4.*",
+        "symfony/stopwatch": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
+        "symfony/validator": "4.4.*",
         "symfony/var-dumper": "4.4.*",
+        "symfony/web-profiler-bundle": "4.4.*",
         "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
